fix(spi): remove beanutils