@@ -18,19 +18,18 @@
  */
 package org.apache.plc4x.java.spi.configuration;
 
-import org.apache.commons.beanutils.BeanUtils;
 import org.apache.commons.lang3.ClassUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.reflect.FieldUtils;
 import org.apache.plc4x.java.spi.configuration.annotations.*;
 import org.apache.plc4x.java.spi.configuration.annotations.defaults.*;
 
-import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -87,24 +86,16 @@ public class ConfigurationFactory {
                 final Field field = fields.get(configName);
                 if (paramStringValues.containsKey(configName)) {
                     String stringValue = paramStringValues.get(configName).get(0);
-                    try {
-                        // As the arguments might be URL encoded, be sure it's decoded.
-                        stringValue = URLDecoder.decode(stringValue, "utf-8");
-                        BeanUtils.setProperty(instance, field.getName(), toFieldValue(field, stringValue));
-                        missingFieldNames.remove(configName);
-                    } catch (InvocationTargetException | UnsupportedEncodingException e) {
-                        throw new IllegalArgumentException("Error setting property of bean: " + field.getName(), e);
-                    }
+                    // As the arguments might be URL encoded, be sure it's decoded.
+                    stringValue = URLDecoder.decode(stringValue, StandardCharsets.UTF_8);
+                    FieldUtils.writeField(instance, field.getName(), toFieldValue(field, stringValue), true);
+                    missingFieldNames.remove(configName);
                 } else {
                     Object defaultValue = getDefaultValueFromAnnotation(field);
                     // TODO: Check if the default values type matches.
                     if (defaultValue != null) {
-                        try {
-                            BeanUtils.setProperty(instance, field.getName(), defaultValue);
-                            missingFieldNames.remove(configName);
-                        } catch (InvocationTargetException e) {
-                            throw new IllegalArgumentException("Error setting property of bean: " + field.getName(), e);
-                        }
+                        FieldUtils.writeField(instance, field.getName(), defaultValue, true);
+                        missingFieldNames.remove(configName);
                     }
                 }
             }
